<resources>
    <string name="app_name">OdooOnline</string>
    <string name="main_menu">Main Menu</string>
    <string name="customer">Customer</string>
    <string name="sale_order">Sale Order</string>
    <string name="search_partner">Search Partner</string>
    <string name="search">Search</string>
    <string name="partner_list">Partner List</string>
    <string name="partner_details">Partner Details</string>
    <string name="customer_name">customer name</string>
    <string name="street">street</string>
    <string name="state">state</string>
    <string name="State">State</string>
    <string name="country">country</string>
    <string name="Country">Country</string>
    <string name="phone">phone</string>
    <string name="mobile">mobile</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="fax">fax</string>
    <string name="fax_n">Fax Number</string>
    <string name="website">website</string>
    <string name="Website">Website</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="phone_n">Phone Number</string>
    <string name="mobile_n">Mobile Number</string>
    <string name="for_each_pair_of_these_textview_and_edittext">For each pair of these TextView and EditText</string>
    <string name="medium_text">Medium text</string>
    <string name="textview">TextView</string>
    <string name="form_element_layout">Form element layout</string>
    <string name="hint_order_date">Hint: order date</string>
    <string name="hint_order_reference">Hint: order reference</string>
    <string name="hint_warehouse">Hint: warehouse</string>
    <string name="hint_customer">Hint: customer</string>
    <string name="hint_order_total">Hint: order total</string>
    <string name="hint_state">Hint: state</string>
    <string name="container_for_tablelayout_so_user_can_scroll_up_or_down_if_the_form_content_is_long_enough">Container for TableLayout so user can scroll up or down if the form content is long enough</string>
    <string name="view_line_details">View Line Details</string>
    <string name="add_new_item">Add New Item</string>
    <string name="sale_order_lines">Sale Order Lines</string>
    <string name="order_date">Order Date</string>
    <string name="order_reference">Order Reference</string>
    <string name="warehouse">Warehouse</string>
    <string name="order_total">Order Total</string>
</resources>