<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerFormActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="357dp"
        android:layout_height="556dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="141dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".EditEntry">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:text="@string/partner_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textName"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    tools:text="Name" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="185dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/customer_name"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textAddress"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    tools:text="Addess" />

                <EditText
                    android:id="@+id/editStreet"
                    android:layout_width="262dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/street"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textAddress2"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    tools:text="" />

                <EditText
                    android:id="@+id/editStreet2"
                    android:layout_width="262dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/street"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textCity"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    tools:text="City" />

                <EditText
                    android:id="@+id/editCity"
                    android:layout_width="262dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/state"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textState"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/State"
                    tools:text="State" />

                <EditText
                    android:id="@+id/editState"
                    android:layout_width="262dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/country"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textCountry"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Country"
                    tools:text="Country" />

                <EditText
                    android:id="@+id/editCountry"
                    android:layout_width="262dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/country"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textPhone"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_n"
                    tools:text="Phone Number" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="262dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/phone"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textMobile"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_n"
                    tools:text="Mobile Number" />

                <EditText
                    android:id="@+id/editMobile"
                    android:layout_width="262dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/mobile"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    tools:text="Email" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="262dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2.5dp">

                <TextView
                    android:id="@+id/textWebsite"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Website"
                    tools:text="Website" />

                <EditText
                    android:id="@+id/editWebsite"
                    android:layout_width="262dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/website"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

        </TableLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="46dp"
        android:onClick="onSavePartner"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSaleOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSaleOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="46dp"
        android:text="@string/sale_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="46dp"
        android:onClick="onDeletePartner"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSaleOrder"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

</androidx.constraintlayout.widget.ConstraintLayout>